More detailed outputs

--- a/1_calculations.ipynb
+++ b/1_calculations.ipynb
@@ -18,16 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B = 87.4\n",
-      "dhw = 0.2284727272727273\n",
-      "dc = 1.6284727272727273\n"
+      "in meters:\n",
+      "Dam height (Ht) = 46\n",
+      "Dam foot width (B) = 87.4\n",
+      "(Nakat?) dhw = 0.2284727272727273\n",
+      "Height above reservoir level (dc) = 1.6284727272727273\n"
      ]
     }
    ],
@@ -58,9 +60,11 @@
     "W_ice = 10000 #in kg / m\n",
     "h_ice = 1 #in meters\n",
     "\n",
-    "print(\"B =\", B)\n",
-    "print(\"dhw =\",dhw)\n",
-    "print(\"dc =\", dc)"
+    "print(\"in meters:\")\n",
+    "print(\"Dam height (Ht) =\", Ht)\n",
+    "print(\"Dam foot width (B) =\", B)\n",
+    "print(\"(Nakat?) dhw =\",dhw)\n",
+    "print(\"Height above reservoir level (dc) =\", dc)"
    ]
   },
   {
@@ -72,15 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F = 468.73145600891814\n",
-      "xcm = 40.95969813970832\n",
+      "Area (F) = 468.73145600891814\n",
+      "x_A (x_cm) = 40.95969813970832\n",
+      "x_B = 46.44030186029168\n",
       "Jy = 326768.2938831049\n",
       "W_A = 7977.80034336532\n",
       "W_B = 7036.308568065207\n"
@@ -92,11 +97,12 @@
     "a = (D - d) / 2\n",
     "\n",
     "F = B * d + a * (2 * b + a * sqrt1n)\n",
-    "print(\"F =\", F)\n",
+    "print(\"Area (F) =\", F)\n",
     "\n",
     "x_cm = (0.5 * B ** 2 * d + a * b ** 2 + a ** 2 * (b + a * sqrt1n / 3) * sqrt1n) / F\n",
-    "print(\"xcm =\", x_cm)\n",
+    "print(\"x_A (x_cm) =\", x_cm)\n",
     "x_B = B - x_cm\n",
+    "print(\"x_B =\", x_B)\n",
     "\n",
     "Jy_list = [0, 0, 0, 0, 0, 0]\n",
     "Jy_list[0] = B ** 3 * d / 12\n",
@@ -127,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +141,7 @@
      "output_type": "stream",
      "text": [
       "in kilograms and kilograms * meters\n",
+      "# | G | M\n",
       "1 | 24122400.0 | -137329582.4053\n",
       "2 | 3503152.7433845615 | -99976309.95026195\n",
       "3 | 312666.7636363636 | -235487613.7444975\n",
@@ -150,6 +157,7 @@
     "dens_c = 2400 #kg / m**3\n",
     "\n",
     "print(\"in kilograms and kilograms * meters\")\n",
+    "print(\"# | G | M\")\n",
     "\n",
     "G1 = 0.5 * dens_c * B * Ht * d\n",
     "M1 = dens_c * Ht * B * d * (B - 3 * x_cm + n * Ht) / 6\n",
@@ -186,18 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Upper beef: \n",
+      "W | M\n",
       "10580000.0 | 162226666.66666666\n",
       "4232000.0 | -147385175.86057895\n",
+      "Lower beef: \n",
+      "W | M\n",
       "-259200.00000000017 | -622080.0000000007\n",
-      "142560.0000000001 -10077739.033203188\n",
-      "142560.0000000001\n"
+      "142560.0000000001 | -10077739.033203188\n"
      ]
     }
    ],
@@ -205,6 +216,8 @@
     "#water pressure\n",
     "dens_w = 1000 #kg / m ** 3\n",
     "\n",
+    "print(\"Upper beef: \")\n",
+    "print(\"W | M\")\n",
     "#upper horizontal\n",
     "H1 = Ht\n",
     "W_uphor = 0.5 * dens_w * H1 ** 2 * D\n",
@@ -216,6 +229,8 @@
     "M_upvert = - dens_w * n * D * H1 ** 2 * (3 * x_cm - n * H1) / 6\n",
     "print(W_upvert, M_upvert, sep=\" | \")\n",
     "\n",
+    "print(\"Lower beef: \")\n",
+    "print(\"W | M\")\n",
     "#lower horizontal\n",
     "W_lowhor = -0.5 * dens_w * H2 ** 2 * D\n",
     "M_lowhor = W_lowhor * H2 / 3\n",
@@ -226,22 +241,21 @@
     "M_lowvert_1 = 2 * n * a * (x_cm - b - a / 2 - n * H2 / 3)\n",
     "M_lowvert_2 = m * (x_B - m * H2 / 3) * d\n",
     "M_lowvert = (M_lowvert_1 + M_lowvert_2) * W_lowhor / D\n",
-    "\n",
-    "print(W_lowvert, M_lowvert)\n",
-    "print(W_lowvert, sep=\" | \")"
+    "print(W_lowvert, M_lowvert, sep=\" | \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-3371400.0000000014 | 0\n",
-      "-2910000.0 | 108280221.58655122\n"
+      "# | U | M\n",
+      "1 | -3371400.0000000014 | 0\n",
+      "2 | -2910000.0 | 108280221.58655122\n"
      ]
     }
    ],
@@ -253,20 +267,24 @@
     "U2 = -dens_w * (H1 - H2) * (b + a) * D\n",
     "M_U2 = -U2 * (x_cm - (b + a) / 2)\n",
     "\n",
-    "print(U1, M_U1, sep=\" | \")\n",
-    "print(U2, M_U2, sep=\" | \")"
+    "print(\"# | U | M\")\n",
+    "print(\"1\", U1, M_U1, sep=\" | \")\n",
+    "print(\"2\", U2, M_U2, sep=\" | \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "W | M\n",
+      "horizontal part\n",
       "425250.0 | 1275750.0\n",
+      "vertical part\n",
       "170100.0 | -6763124.653564385\n"
      ]
     }
@@ -282,21 +300,31 @@
     "W_alluvert = 0.5 * dens_allu * n * H_allu ** 2 * D\n",
     "M_alluvert = -W_alluvert *  (x_cm - n * H_allu / 3)\n",
     "\n",
+    "print(\"W | M\")\n",
+    "print(\"horizontal part\")\n",
     "print(W_alluhor, M_alluhor, sep=\" | \")\n",
+    "print(\"vertical part\")\n",
     "print(W_alluvert, M_alluvert, sep=\" | \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "wave pressure:\n",
+      "horizontal part\n",
+      "W | M\n",
       "12804.838452968328 | 574929.5020872002\n",
+      "vertical part:\n",
+      "W\n",
       "5121.935381187332\n",
+      "\n",
+      "ice pressure: W | M\n",
       "10000 | 455500.0\n"
      ]
     }
@@ -309,19 +337,25 @@
     "\n",
     "W_wavvert = W_wavhor * n\n",
     "\n",
+    "print(\"wave pressure:\")\n",
+    "print(\"horizontal part\")\n",
+    "print(\"W | M\")\n",
     "print(W_wavhor, M_wavhor, sep=\" | \")\n",
+    "print(\"vertical part:\")\n",
+    "print(\"W\")\n",
     "print(W_wavvert)\n",
+    "print()\n",
     "\n",
     "#ice pressure\n",
     "\n",
     "M_ice = W_ice * (H1 - 0.45 * h_ice)\n",
-    "\n",
+    "print(\"ice pressure: W | M\")\n",
     "print(W_ice, M_ice, sep=\" | \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
