Initial data corrected, optimal profile started

--- a/1_calculations.ipynb
+++ b/1_calculations.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,10 +26,11 @@
      "output_type": "stream",
      "text": [
       "in meters:\n",
-      "Dam height (Ht) = 46\n",
-      "Dam foot width (B) = 87.4\n",
+      "Dam height (Ht) = 50\n",
+      "Dam foot width (B) = 46\n",
       "(Nakat?) dhw = 0.2284727272727273\n",
-      "Height above reservoir level (dc) = 1.6284727272727273\n"
+      "Height above reservoir level (dc) = 1.6284727272727273\n",
+      "m = 0.6200000000000001\n"
      ]
     }
    ],
@@ -41,10 +42,11 @@
     "Lw = 11 * hw\n",
     "dhw = const_pi * hw ** 2 / Lw\n",
     "\n",
-    "n = 0.4  #0.3 - 0.5\n",
-    "m = 1.5\n",
-    "Ht = 46\n",
+    "B = 46\n",
+    "n = 0.3  #0.1 - 0.5\n",
+    "Ht = 50\n",
     "H2 = 105.2 - 98\n",
+    "m = B / Ht - n\n",
     "\n",
     "#coast:\n",
     "Bc = 8\n",
@@ -52,7 +54,6 @@
     "#how to calculate ec?\n",
     "ec = 0.5\n",
     "\n",
-    "B = n * Ht + m * Ht\n",
     "b = 5\n",
     "D = 10\n",
     "d = 5\n",
@@ -64,7 +65,8 @@
     "print(\"Dam height (Ht) =\", Ht)\n",
     "print(\"Dam foot width (B) =\", B)\n",
     "print(\"(Nakat?) dhw =\",dhw)\n",
-    "print(\"Height above reservoir level (dc) =\", dc)"
+    "print(\"Height above reservoir level (dc) =\", dc)\n",
+    "print(\"m =\", m)"
    ]
   },
   {
@@ -76,19 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area (F) = 468.73145600891814\n",
-      "x_A (x_cm) = 40.95969813970832\n",
-      "x_B = 46.44030186029168\n",
-      "Jy = 326768.2938831049\n",
-      "W_A = 7977.80034336532\n",
-      "W_B = 7036.308568065207\n"
+      "Area (F) = 261.5251915680691\n",
+      "x_A (x_cm) = 20.612939842816537\n",
+      "x_B = 25.387060157183463\n",
+      "Jy = 51541.85607201229\n",
+      "W_A = 2500.461189187153\n",
+      "W_B = 2030.2412233985324\n"
      ]
     }
    ],
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,12 +144,12 @@
      "text": [
       "in kilograms and kilograms * meters\n",
       "# | G | M\n",
-      "1 | 24122400.0 | -137329582.4053\n",
-      "2 | 3503152.7433845615 | -99976309.95026195\n",
-      "3 | 312666.7636363636 | -235487613.7444975\n",
-      "4 | 367500.0 | -9148189.066342806\n",
-      "5 | -26133.333333333332 | -475154.1854584515\n",
-      "6 | -42732.9957552047 | 718235.5991536195\n"
+      "1 | 13800000.0 | -3858569.8308682158\n",
+      "2 | 3783022.9881682917 | -37510187.9270014\n",
+      "3 | 312666.7636363636 | -96518384.46344931\n",
+      "4 | 490000.0 | -3893673.8563134368\n",
+      "5 | -114724.24557752337 | -199846.43509067228\n",
+      "6 | -104935.44957580288 | -47576.96991507821\n"
      ]
     }
    ],
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,12 +205,12 @@
      "text": [
       "Upper beef: \n",
       "W | M\n",
-      "10580000.0 | 162226666.66666666\n",
-      "4232000.0 | -147385175.86057895\n",
+      "12500000.0 | 208333333.33333334\n",
+      "3750000.0 | -58548524.410562016\n",
       "Lower beef: \n",
       "W | M\n",
       "-259200.00000000017 | -622080.0000000007\n",
-      "142560.0000000001 | -10077739.033203188\n"
+      "41472.00000000002 | -2450774.7828387143\n"
      ]
     }
    ],
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,8 +256,8 @@
      "output_type": "stream",
      "text": [
       "# | U | M\n",
-      "1 | -3371400.0000000014 | 0\n",
-      "2 | -2910000.0 | 108280221.58655122\n"
+      "1 | -1881000.0000000007 | 0\n",
+      "2 | -3210000.0 | 54130036.895441085\n"
      ]
     }
    ],
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +287,7 @@
       "horizontal part\n",
       "425250.0 | 1275750.0\n",
       "vertical part\n",
-      "170100.0 | -6763124.653564385\n"
+      "127575.0 | -2514878.30044732\n"
      ]
     }
    ],
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -319,13 +321,13 @@
       "wave pressure:\n",
       "horizontal part\n",
       "W | M\n",
-      "12804.838452968328 | 574929.5020872002\n",
+      "12804.838452968328 | 626148.8558990735\n",
       "vertical part:\n",
       "W\n",
-      "5121.935381187332\n",
+      "3841.4515358904982\n",
       "\n",
       "ice pressure: W | M\n",
-      "10000 | 455500.0\n"
+      "10000 | 495500.0\n"
      ]
     }
    ],
@@ -355,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N = 26505235.113313578 kg\n",
-      "Qsummer = | 10758854.838452969 | Qwinter = | 10756050.0 | kg\n",
-      "Msummer = | -374189165.54474866 | Mwinter = | -374308595.04683584 | kg * m\n"
+      "N = 16997918.50818722 kg\n",
+      "Qsummer = | 12678854.838452969 | Qwinter = | 12676050.0 | kg\n",
+      "Msummer = | 58200772.108187325 | Mwinter = | 58070123.25228825 | kg * m\n"
      ]
     }
    ],
@@ -380,6 +382,32 @@
     "print(\"N =\", N, \"kg\")\n",
     "print(\"Qsummer =\", Qsummer, \"Qwinter =\", Qwinter, \"kg\", sep=\" | \")\n",
     "print(\"Msummer =\", Msummer, \"Mwinter =\", Mwinter, \"kg * m\", sep=\" | \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimal profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-432699407.1274881\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigma_a = 0.1 #MPa\n",
+    "\n",
+    "print( sigma_a * B ** 2 - N * B + 6 * Msummer )"
    ]
   },
   {
