More understandable and flexible initial data

--- a/1_calculations.ipynb
+++ b/1_calculations.ipynb
@@ -30,43 +30,57 @@
       "Dam foot width (B) = 46\n",
       "(Nakat?) dhw = 0.2284727272727273\n",
       "Height above reservoir level (dc) = 1.6284727272727273\n",
-      "m = 0.6200000000000001\n"
+      "m = 0.6200000000000001\n",
+      "Lower beef depth (H2) = 7.200000000000003\n"
      ]
     }
    ],
    "source": [
-    "#initial data\n",
+    "#constant\n",
     "const_pi = 3.1415\n",
     "\n",
-    "hw = 0.8\n",
-    "Lw = 11 * hw\n",
-    "dhw = const_pi * hw ** 2 / Lw\n",
-    "\n",
+    "#dam profile\n",
     "B = 46\n",
     "n = 0.3  #0.1 - 0.5\n",
-    "Ht = 50\n",
-    "H2 = 105.2 - 98\n",
-    "m = B / Ht - n\n",
+    "Ht = 50 #height of triangle profile\n",
+    "H2 = 105.2 - 98 # = 7.2 meters\n",
     "\n",
-    "#coast:\n",
-    "Bc = 8\n",
-    "dc = hw + dhw + 0.6\n",
-    "#how to calculate ec?\n",
-    "ec = 0.5\n",
-    "\n",
+    "#section profile\n",
     "b = 5\n",
     "D = 10\n",
     "d = 5\n",
     "\n",
+    "#coast:\n",
+    "Bc = 8\n",
+    "\n",
+    "#reservoir\n",
+    "hw = 0.8\n",
     "W_ice = 10000 #in kg / m\n",
     "h_ice = 1 #in meters\n",
+    "H_allu = 9 #in meters - Alluvium layer thickness\n",
+    "\n",
+    "#density\n",
+    "dens_c = 2400 #kg / m**3 - Concrete\n",
+    "dens_w = 1000 #kg / m ** 3 - Water\n",
+    "dens_allu = 1050 #in kg / m ** 3 - Alluvium\n",
+    "\n",
+    "#secondary data\n",
+    "Lw = 11 * hw\n",
+    "dhw = const_pi * hw ** 2 / Lw\n",
+    "\n",
+    "m = B / Ht - n\n",
+    "\n",
+    "dc = hw + dhw + 0.6\n",
+    "#how to calculate ec?\n",
+    "ec = 0.5\n",
     "\n",
     "print(\"in meters:\")\n",
     "print(\"Dam height (Ht) =\", Ht)\n",
     "print(\"Dam foot width (B) =\", B)\n",
     "print(\"(Nakat?) dhw =\",dhw)\n",
     "print(\"Height above reservoir level (dc) =\", dc)\n",
-    "print(\"m =\", m)"
+    "print(\"m =\", m)\n",
+    "print(\"Lower beef depth (H2) =\", H2)"
    ]
   },
   {
@@ -156,8 +170,6 @@
    "source": [
     "#own weight\n",
     "\n",
-    "dens_c = 2400 #kg / m**3\n",
-    "\n",
     "print(\"in kilograms and kilograms * meters\")\n",
     "print(\"# | G | M\")\n",
     "\n",
@@ -216,7 +228,6 @@
    ],
    "source": [
     "#water pressure\n",
-    "dens_w = 1000 #kg / m ** 3\n",
     "\n",
     "print(\"Upper beef: \")\n",
     "print(\"W | M\")\n",
@@ -293,8 +304,6 @@
    ],
    "source": [
     "#alluvium pressure\n",
-    "dens_allu = 1050 #in kg / m ** 3\n",
-    "H_allu = 9 #in meters\n",
     "\n",
     "W_alluhor = 0.5 * dens_allu * H_allu ** 2 * D\n",
     "M_alluhor = W_alluhor * H_allu / 3\n",
