Corrected math, added B(n) dependence

--- a/1_calculations.ipynb
+++ b/1_calculations.ipynb
@@ -27,10 +27,10 @@
      "text": [
       "in meters:\n",
       "Dam height (Ht) = 50\n",
-      "Dam foot width (B) = 46\n",
+      "Dam foot width (B) = 41\n",
       "(Nakat?) dhw = 0.2284727272727273\n",
       "Height above reservoir level (dc) = 1.6284727272727273\n",
-      "m = 0.6200000000000001\n",
+      "m = 0.6199999999999999\n",
       "Lower beef depth (H2) = 7.200000000000003\n"
      ]
     }
@@ -40,39 +40,43 @@
     "const_pi = 3.1415\n",
     "\n",
     "#dam profile\n",
-    "B = 46\n",
-    "n = 0.3  #0.1 - 0.5\n",
+    "B = 41\n",
+    "n = 0.2  #0.1 - 0.5\n",
     "Ht = 50 #height of triangle profile\n",
     "H2 = 105.2 - 98 # = 7.2 meters\n",
     "\n",
     "#section profile\n",
-    "b = 5\n",
-    "D = 10\n",
-    "d = 5\n",
+    "b = 5 #meters\n",
+    "D = 10 #meters\n",
+    "d = 5 #meters\n",
     "\n",
     "#coast:\n",
-    "Bc = 8\n",
+    "Bc = 8 #meters\n",
     "\n",
     "#reservoir\n",
-    "hw = 0.8\n",
-    "W_ice = 10000 #in kg / m\n",
+    "hw = 0.8 #meters\n",
+    "W_ice = 10 #in tons / m\n",
     "h_ice = 1 #in meters\n",
-    "H_allu = 9 #in meters - Alluvium layer thickness\n",
+    "H_allu = 24 #in meters - Alluvium layer thickness\n",
     "\n",
     "#density\n",
-    "dens_c = 2400 #kg / m**3 - Concrete\n",
-    "dens_w = 1000 #kg / m ** 3 - Water\n",
-    "dens_allu = 1050 #in kg / m ** 3 - Alluvium\n",
+    "dens_c = 2.4 #tons / m**3 - Concrete\n",
+    "dens_w = 1 #tons / m ** 3 - Water\n",
+    "dens_allu = 1.05 #tons / m ** 3 - Alluvium\n",
     "\n",
     "#secondary data\n",
-    "Lw = 11 * hw\n",
-    "dhw = const_pi * hw ** 2 / Lw\n",
+    "Lw = 11 * hw #in meters\n",
+    "dhw = const_pi * hw ** 2 / Lw #in meters\n",
     "\n",
     "m = B / Ht - n\n",
     "\n",
-    "dc = hw + dhw + 0.6\n",
+    "dc = hw + dhw + 0.6 #meters\n",
     "#how to calculate ec?\n",
-    "ec = 0.5\n",
+    "ec = 0.5 #meters\n",
+    "\n",
+    "#criteria\n",
+    "#sigma_a = 0.1 #MPa\n",
+    "sigma_a = 1000 #tons / m**2\n",
     "\n",
     "print(\"in meters:\")\n",
     "print(\"Dam height (Ht) =\", Ht)\n",
@@ -99,12 +103,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area (F) = 261.5251915680691\n",
-      "x_A (x_cm) = 20.612939842816537\n",
-      "x_B = 25.387060157183463\n",
-      "Jy = 51541.85607201229\n",
-      "W_A = 2500.461189187153\n",
-      "W_B = 2030.2412233985324\n"
+      "Area (F) = 236.373774391991\n",
+      "x_A (x_cm) = 18.201196599297504\n",
+      "x_B = 22.798803400702496\n",
+      "Jy = 36990.27098262183\n",
+      "W_A = 2032.2988535846873\n",
+      "W_B = 1622.4654571775486\n"
      ]
     }
    ],
@@ -156,21 +160,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "in kilograms and kilograms * meters\n",
+      "in tons | tons * meters\n",
       "# | G | M\n",
-      "1 | 13800000.0 | -3858569.8308682158\n",
-      "2 | 3783022.9881682917 | -37510187.9270014\n",
-      "3 | 312666.7636363636 | -96518384.46344931\n",
-      "4 | 490000.0 | -3893673.8563134368\n",
-      "5 | -114724.24557752337 | -199846.43509067228\n",
-      "6 | -104935.44957580288 | -47576.96991507821\n"
+      "1 | 12300.0 | -14774.718171359295\n",
+      "2 | 3764.852927038918 | 55629.48724736564\n",
+      "3 | 312.6667636363636 | 2407.90821682972\n",
+      "4 | 735.0 | -7742.879500483666\n",
+      "5 | -76.48283038501563 | -307.01773944780666\n",
+      "6 | -330.90994371482185 | 13.334601777915594\n"
      ]
     }
    ],
    "source": [
     "#own weight\n",
     "\n",
-    "print(\"in kilograms and kilograms * meters\")\n",
+    "print(\"in tons | tons * meters\")\n",
     "print(\"# | G | M\")\n",
     "\n",
     "G1 = 0.5 * dens_c * B * Ht * d\n",
@@ -178,11 +182,14 @@
     "print(\"1\", G1, M1, sep=\" | \")\n",
     "\n",
     "G2 = dens_c * Ht * (a * sqrt1n + 2 * b) * a\n",
-    "M2 = -dens_c * Ht * a * (b * (2 * x_cm - b - n * Ht) + a * sqrt1n * (x_cm - b - n * Ht / 2 - a / 3 * sqrt1n))\n",
+    "M2_1 = (2*a + 4*b) * x_cm / 2\n",
+    "M2_2 = b + n * Ht\n",
+    "M2_3 = a * (2 * a + 6 * b + 3 * n * Ht) / 6\n",
+    "M2 = dens_c * Ht * a * (M2_1 - M2_2 - M2_3)\n",
     "print(\"2\", G2, M2, sep=\" | \")\n",
     "\n",
     "G3 = dens_c * Bc * D * dc\n",
-    "M3 = -G3 * (x_cm * n * Ht - ec)\n",
+    "M3 = G3 * (x_cm - n * Ht - ec)\n",
     "print(\"3\", G3, M3, sep=\" | \")\n",
     "\n",
     "a1 = (0.5 * Bc - ec)\n",
@@ -192,17 +199,25 @@
     "\n",
     "a2 = (0.5 * Bc - ec)\n",
     "G5 = -0.5 * dens_c * n * D * a2 ** 2 / m ** 2\n",
-    "M5 = G5 * (x_cm - b - n * Ht + 2 * n * a2 / 3 / m)\n",
+    "M5_1 = n * Ht * (1 - 2 * b / (3 * B))\n",
+    "M5 = G5 * (x_cm - b - M5_1)\n",
     "print(\"5\", G5, M5, sep=\" | \")\n",
     "\n",
-    "a_star = a2 * (b + a * sqrt1n) * sqrt1n / m / b\n",
-    "b_star = x_cm - b - n * Ht - a * sqrt1n\n",
-    "n1 = (1 - n * m) / (n + m)\n",
-    "G6 = -dens_c * a ** 2 * (a_star - 2 * a * (1 + n ** 2) * Ht / 3 / B)\n",
-    "M6_1 = a_star * (b_star + n * a / 2 + 2 * a / 3 / sqrt1n)\n",
-    "M6_2_2 = n * (2 + n ** 2) / sqrt1n + n1 * (2 - n ** 2) / (sqrt(1 + n1 ** 2))\n",
-    "M6_2 = -2/3 * a *(n * n1 * a_star + (n + n1) * b_star + 3 / 8 * M6_2_2 * a)\n",
-    "M6 = dens_c * a ** 2 * (M6_1 + M6_2)\n",
+    "G6_1 = a ** 2 / (6 * B * (1 + n ** 2))\n",
+    "G6_2 = (n * B + (1-n) * Ht) * (D + 2 * d)\n",
+    "G6_3 = 3 * (1 + n ** 2) * (D + d) * b * Ht / a\n",
+    "G6 = -dens_c * G6_1 * (G6_2 + G6_3)\n",
+    "M6_1 = a ** 2 * (D + 2 * d) / (6 * (1 + n ** 2) * B ** 2)\n",
+    "M6_1_1 = (x_cm - n * Ht - b) * (n * B + Ht * (1 - n)) * B\n",
+    "M6_1_2 = n * b * Ht ** 2 * (1 - n)\n",
+    "M6_2 = a ** 3 * (D + 3 * d) / (24 * B ** 2 * sqrt1n)\n",
+    "M6_2_1 = n * B ** 2 * (2 + n ** 2)\n",
+    "M6_2_2 = (1-n) * (2*B - n * (1-n) * Ht) * Ht\n",
+    "M6_3 = a * (D+d) * b * Ht / 2 / B\n",
+    "M6_3_1 = x_cm - n * Ht - b\n",
+    "M6_3_2 = 2 * a * (D + 2 * d) * B + 3 * n * (1 + n ** 2) * b * Ht * d\n",
+    "M6_3_3 = 6 * (1+n**2) * B * d\n",
+    "M6 = -dens_c * M6_1 * (M6_1_1 + M6_1_2) + dens_c * M6_2 * (M6_2_1 + M6_2_2) - dens_c * M6_3 * (M6_3_1 - M6_3_2 / M6_3_3)\n",
     "print(\"6\", G6, M6, sep=\" | \")"
    ]
   },
@@ -217,12 +232,12 @@
      "text": [
       "Upper beef: \n",
       "W | M\n",
-      "12500000.0 | 208333333.33333334\n",
-      "3750000.0 | -58548524.410562016\n",
+      "12500.0 | 208333.33333333334\n",
+      "2500.0 | -37169.65816491043\n",
       "Lower beef: \n",
       "W | M\n",
-      "-259200.00000000017 | -622080.0000000007\n",
-      "41472.00000000002 | -2450774.7828387143\n"
+      "-259.2000000000002 | -622.0800000000007\n",
+      "54.43200000000004 | -2009.6990907070399\n"
      ]
     }
    ],
@@ -267,8 +282,8 @@
      "output_type": "stream",
      "text": [
       "# | U | M\n",
-      "1 | -1881000.0000000007 | 0\n",
-      "2 | -3210000.0 | 54130036.895441085\n"
+      "1 | -1701.0000000000007 | 0\n",
+      "2 | -3210.0 | 46388.341083744985\n"
      ]
     }
    ],
@@ -296,9 +311,9 @@
      "text": [
       "W | M\n",
       "horizontal part\n",
-      "425250.0 | 1275750.0\n",
+      "3024.0000000000005 | 24192.000000000004\n",
       "vertical part\n",
-      "127575.0 | -2514878.30044732\n"
+      "604.8000000000001 | -10040.40370325513\n"
      ]
     }
    ],
@@ -330,13 +345,13 @@
       "wave pressure:\n",
       "horizontal part\n",
       "W | M\n",
-      "12804.838452968328 | 626148.8558990735\n",
+      "12.804838452968328 | 626.1488558990735\n",
       "vertical part:\n",
       "W\n",
-      "3841.4515358904982\n",
+      "2.5609676905936656\n",
       "\n",
       "ice pressure: W | M\n",
-      "10000 | 495500.0\n"
+      "10 | 495.5\n"
      ]
     }
    ],
@@ -373,9 +388,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N = 16997918.50818722 kg\n",
-      "Qsummer = | 12678854.838452969 | Qwinter = | 12676050.0 | kg\n",
-      "Msummer = | 58200772.108187325 | Mwinter = | 58070123.25228825 | kg * m\n"
+      "B = 41, Ht = 50, n = 0.2\n",
+      "N = 14955.919884266039 tons\n",
+      "Qsummer = | 15277.604838452968 | tons | Msummer = | 264924.0969687874 | tons * m\n",
+      "Qwinter = | 15274.8 | tons | Mwinter = | 264793.4481128883 | tons * m\n",
+      "\n",
+      "Stretching stress criteria (must be close to 0) = 2657351.866557817\n"
      ]
     }
    ],
@@ -388,35 +406,20 @@
     "Msummer = M1 + M2 + M3 + M4 + M5 + M6 + M_uphor + M_lowhor + M_upvert + M_lowvert + M_U2 + M_alluhor + M_alluvert + M_wavhor\n",
     "Mwinter = M1 + M2 + M3 + M4 + M5 + M6 + M_uphor + M_lowhor + M_upvert + M_lowvert + M_U2 + M_alluhor + M_alluvert + M_ice\n",
     "\n",
-    "print(\"N =\", N, \"kg\")\n",
-    "print(\"Qsummer =\", Qsummer, \"Qwinter =\", Qwinter, \"kg\", sep=\" | \")\n",
-    "print(\"Msummer =\", Msummer, \"Mwinter =\", Mwinter, \"kg * m\", sep=\" | \")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Optimal profile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-432699407.1274881\n"
-     ]
-    }
-   ],
-   "source": [
-    "sigma_a = 0.1 #MPa\n",
+    "#stretching stress criteria\n",
     "\n",
-    "print( sigma_a * B ** 2 - N * B + 6 * Msummer )"
+    "stretch = sigma_a * B ** 2 - N * B + 6 * Msummer\n",
+    "\n",
+    "#output\n",
+    "\n",
+    "print(\"B =\", B, end=\", \")\n",
+    "print(\"Ht =\", Ht, end=\", \")\n",
+    "print(\"n =\", n)\n",
+    "print(\"N =\", N, \"tons\")\n",
+    "print(\"Qsummer =\", Qsummer, \"tons\", \"Msummer =\" , Msummer, \"tons * m\", sep=\" | \")\n",
+    "print(\"Qwinter =\", Qwinter, \"tons\", \"Mwinter =\" , Mwinter, \"tons * m\", sep=\" | \")\n",
+    "print()\n",
+    "print(\"Stretching stress criteria (must be close to 0) =\", stretch)"
    ]
   },
   {
