tau definitions (as comments)

--- a/2_functions.ipynb
+++ b/2_functions.ipynb
@@ -702,7 +702,7 @@
     }
    ],
    "source": [
-    "def sigma_z(sigma_out=None):\n",
+    "def sigma_z(out=None):\n",
     "    N_t = static_calculation(show_winter=False, output=\"N\", print_all=False)\n",
     "\n",
     "    Lw = 11 * hw #in meters\n",
@@ -735,9 +735,9 @@
     "    sigma_zA = (N_t / F) * (1 - e * F / W_A)\n",
     "    sigma_zB = (N_t / F) * (1 - e * F / W_B)\n",
     "\n",
-    "    if sigma_out == \"A\":\n",
+    "    if out == \"A\":\n",
     "        return sigma_zA\n",
-    "    elif sigma_out == \"B\":\n",
+    "    elif out == \"B\":\n",
     "        return sigma_zB\n",
     "\n",
     "B = 35\n",
@@ -745,10 +745,18 @@
     "print(\"B  |  sigma_zA\")\n",
     "print(\"____\")\n",
     "for i in range(20):\n",
-    "    print(B, sigma_z(sigma_out=\"A\"),sep=\" | \")\n",
+    "    print(B, sigma_z(out=\"A\"),sep=\" | \")\n",
     "    B += 1\n",
     "\n",
-    "B = 49"
+    "B = 49\n",
+    "\n",
+    "\"\"\"\n",
+    "#plotting\n",
+    "\n",
+    "for i in range(100):\n",
+    "    sigma_z = (sigma_zA * (x_B - x) + sigma_zB * (x - x_A)) / B\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -768,29 +776,32 @@
    "source": [
     "p_a = static_calculation(output=\"p_a\", print_all=False)\n",
     "print(\"p_a =\", p_a)\n",
-    "sigma_xA = (1 - n ** 2) * p_a  + n ** 2 * sigma_z(sigma_out=\"A\")\n",
-    "print(\"sigma_xA =\",sigma_xA)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p_b = 269.5924235089705\n",
-      "sigma_xB = 178.3858500440967\n"
-     ]
-    }
-   ],
-   "source": [
+    "sigma_xA = (1 - n ** 2) * p_a  + n ** 2 * sigma_z(out=\"A\")\n",
+    "print(\"sigma_xA =\",sigma_xA)\n",
+    "\n",
     "p_b = static_calculation(output=\"p_b\", print_all=False)\n",
     "print(\"p_b =\", p_b)\n",
-    "sigma_xB = (1 - m ** 2) * p_b  + n ** 2 * sigma_z(sigma_out=\"B\")\n",
-    "print(\"sigma_xB =\", sigma_xB)"
+    "sigma_xB = (1 - m ** 2) * p_b  + n ** 2 * sigma_z(out=\"B\")\n",
+    "print(\"sigma_xB =\", sigma_xB)\n",
+    "\n",
+    "\"\"\"\n",
+    "c1 = \n",
+    "c2 = \n",
+    "d_x = None\n",
+    "#loop start\n",
+    "if x_A <= x < c1:\n",
+    "    d_x = D\n",
+    "elif c1 <= x <= c2:\n",
+    "    d_x = D - (D - d) * (x - c1) / (c2 - c1)\n",
+    "elif c2 < x <= x_B:\n",
+    "    d_x = d\n",
+    "else:\n",
+    "    print(\"error\")\n",
+    "    break\n",
+    "sigma_x = (sigma_xA * (x_B - x) * D + sigma_xB * (x - x_A) * d) / (B * d_x)\n",
+    "\n",
+    "loop end\n",
+    "\"\"\""
    ]
   },
   {
@@ -808,10 +819,29 @@
     }
    ],
    "source": [
-    "tau_xzA = n * (p_a - sigma_z(sigma_out=\"A\"))\n",
+    "#tau_xz = tau_zx\n",
+    "tau_xzA = n * (p_a - sigma_z(out=\"A\"))\n",
     "print(tau_xzA)\n",
-    "tau_xzB = -m * (p_b - sigma_z(sigma_out=\"B\"))\n",
-    "print(tau_xzB)"
+    "tau_xzB = -m * (p_b - sigma_z(out=\"B\"))\n",
+    "print(tau_xzB)\n",
+    "\"\"\"\n",
+    "c1 = \n",
+    "c2 = \n",
+    "d_x = None\n",
+    "#loop start\n",
+    "if x_A <= x < c1:\n",
+    "    d_x = D\n",
+    "elif c1 <= x <= c2:\n",
+    "    d_x = D - (D - d) * (x - c1) / (c2 - c1)\n",
+    "elif c2 < x <= x_B:\n",
+    "    d_x = d\n",
+    "else:\n",
+    "    print(\"error\")\n",
+    "    break\n",
+    "tau_tilda_xz = tau_xzA * (x_B - x) * D + tau_xzB * (x - x_A) * d / (B * d_x)\n",
+    "\n",
+    "loop end\n",
+    "\"\"\""
    ]
   },
   {
@@ -819,7 +849,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
