--- a/2_functions.ipynb
+++ b/2_functions.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Annotation\n",
+    "\n",
+    "### Dam requirements:\n",
+    "\n",
+    "1. Sustainability - dam not moving under the water and alluvium pressure forces\n",
+    "2. No stretching tensions at every type of tension - normal and tangent tension more or equal to zero\n",
+    "3. Compressive tensions dont exceed defined limit\n",
+    "\n",
+    "### The goal:\n",
+    "To find out following geometrical characteristics:\n",
+    "1. B\n",
+    "2. n\n",
+    "\n",
+    "and plot resulting normal and tangent tensions.\n",
+    "\n",
+    "Other characteristics are defined by student's preferences and constructive reasons.\n",
+    "\n",
+    "### How calculations is done:\n",
+    "\n",
+    "1. Defined initial data as global variables.\n",
+    "2. Defined a fuction, which calculates forces summary (N, Q, M).\n",
+    "3. Fuction test, using initial data.\n",
+    "4. Figuring out how sustainable dam gonna be with different B and n values\n",
+    "5. Plotting B(n) dependence with sustainability criteria close to zero.\n",
+    "6. Tensions calculation and fitting geometry.\n",
+    "7. Final checkout"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -841,6 +873,12 @@
     "tau_tilda_xz = tau_xzA * (x_B - x) * D + tau_xzB * (x - x_A) * d / (B * d_x)\n",
     "\n",
     "loop end\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "deltaQ = Q - (tau_xzA * D + tau_xzB * d) * B / 2\n",
+    "\n",
     "\"\"\""
    ]
   },
