--- a/4_Formulas.ipynb
+++ b/4_Formulas.ipynb
@@ -4,8 +4,189 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$  L_w = 11 * h_w $$"
+    "$$ x_A = (0.5 * B ^ 2  d + a  b ^ 2 + a ^ 2  (b + a  \\sqrt{1 + n ^ 2} / 3)  \\sqrt{1 + n ^ 2}) / F $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ x_B = B - x_A $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy_0 = B ^ 3  d / 12 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy_1 = a  b ^ 3 / 6 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy_2 = \\frac {a ^ 4}{18} (1 + n ^ 2) ^ {1.5} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy_3 = (x_A - 0.5  B) ^ 2  B  d $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy_4 = 2  (x_A - 0.5  b) ^ 2  a  b $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy_5 = a ^ 2 (x_A - b - a  \\sqrt{1 + n ^ 2} / 3) ^ 2  \\sqrt{1 + n ^ 2} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Jy = \\sum J_{yi} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$W_A = \\frac{J_y}{|x_A|}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$W_B = \\frac{J_y}{|x_B|}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$F = B d + a (2  b + a  \\sqrt{1 + n ^ 2})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$a = (D - d) / 2 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ G_1 = 0.5  \\gamma_c  B  Ht  d $$\n",
+    "\n",
+    "$$ M_1 = \\gamma_c  Ht  B  d  (B - 3  x_A + n  H_t) / 6 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ G_2 = \\gamma_c  H_t  (a  \\sqrt{1 + n ^ 2} + 2  b)  a $$\n",
+    "\n",
+    "$$ M_{2,1} = b  (2  x_A - b - n  H_t) $$\n",
+    "\n",
+    "$$ M_{2,2} = a  \\sqrt{1 + n ^ 2}  (x_A - b - (n  H_t) / 2 - (a  \\sqrt{1 + n ^ 2}) / 3) $$\n",
+    "\n",
+    "$$ M_2 = -\\gamma_c  H_t  a ( M_{2,1} + M_{2,2} ) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ d_{hw} = \\pi  h_w ^ 2 / L_w $$\n",
+    "$$ d_c = hw + d_{hw} + 0.6 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ G_3 = \\gamma_c  B_c  D  d_c $$\n",
+    "$$ M_3 = -G_3 * (x_A - n  H_t - e_c) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ a_1 = (0.5  B_c - e_c) $$\n",
+    "$$ a_2 = (0.5  B_c + e_c) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ G4 = 0.5  \\gamma_c  D  a_1 ^ 2 / n $$\n",
+    "$$ M4 = -G4  (x_A - n  H_t + 2  a_1 / 3) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ G5 = -0.5  \\gamma_c  n  D  a_2 ^ 2 / m ^ 2 $$\n",
+    "$$ M_{5,1} = \\frac{2  n  a_2 }{ 3  m} $$\n",
+    "$$ M_5 = -G_5 * (x_A - b - n  H_t + M_{5,1}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ a^* = \\frac{a_2  (b + a  \\sqrt{1 + n ^ 2})  \\sqrt{1 + n ^ 2}} {m  b} $$\n",
+    "$$ b^* = x_A - b - n  H_t - a  \\sqrt{1 + n ^ 2} $$\n",
+    "$$ n_1 = \\frac {1 - n  m}{n + m} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -25,20 +206,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ x_A = (0.5 * B ^ 2 * d + a * b ^ 2 + a ^ 2 * (b + a * \\sqrt{1 + n ^ 2} / 3) * \\sqrt{1 + n ^ 2}) / F $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ x_B = B - x_A $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "$$ F = B * d + a * (2 * b + a * \\sqrt{1 + n ^ 2}) $$"
    ]
   },
@@ -46,20 +213,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ Jy_0 = B ^ 3 * d / 12 $$\n",
-    "$$ Jy_1 = a * b ^ 3 / 6 $$\n",
-    "$$ Jy_2 = \\frac {a ^ 4}{18}* (1 + n ^ 2) ^ {1.5} $$\n",
-    "$$ Jy_3 = (x_A - 0.5 * B) ^ 2 * B * d $$\n",
-    "$$ Jy_4 = 2 * (x_A - 0.5 * b) ^ 2 * a * b $$\n",
-    "$$ Jy_5 = a ^ 2 *(x_A - b - a * \\sqrt{1 + n ^ 2} / 3) ^ 2 * \\sqrt{1 + n ^ 2} $$\n",
-    "$$ Jy = \\sum J_i $$"
+    "$$ \\sigma_z = \\frac{\\sum N}{F} \\mp \\frac{\\sum M_cm \\times x}{J_y} $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\sigma_z = \\frac{\\sum N}{F} \\mp \\frac{\\sum M_cm \\times x}{J_y} $$"
+    "$$  L_w = 11 * h_w $$"
    ]
   },
   {
